<?xml version="1.0"?>
<package>
  <name>luxagent</name>
  <version>0.0.0</version>
  <description>LuxAgent - allows control of ROS installation via RobotLux</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="simonbirrell@gmail.com">simonbirrell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>(c) Simon Birrell 2015-2016</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/luxagent</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="simonbirrell@gmail.com">simonbirrell</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend> 
  <build_depend>rosgraph</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-gevent</build_depend>
  <build_depend>python-ws4py-pip</build_depend>
  <build_depend>rosbridge-library</build_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-gevent</run_depend>
  <run_depend>python-ws4py-pip</run_depend>
  <run_depend>python-bson</run_depend>
  <run_depend>rosbridge-library</run_depend>

  <!-- rosgraph 
  <run_depend>python-netifaces</run_depend>
  <run_depend>python-rospkg</run_depend>
  <test_depend>python-mock</test_depend>
-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>